@@ -209,29 +209,31 @@ key alt+t;goToTag
 key alt+);goToTagUnderCursor
 key alt+(;popTag
 
-key backspace;backspace
-key ctrl+h;backspace
-key del;delete
-#key ctrl+k;deleteLine
-key ctrl+k;deleteAndStoreLine
-key ctrl+alt+k;deleteToEOL
-key esc del;collapseWhitespace
-key esc [ 3 ; 3 ~    collapseWhitespace
-key alt+w            wrap_paragraph
-key alt+a            columnize
-key enter;carriageReturn
-key tab;parsedIndent
-#key tab;indent
-#key ctrl+alt+l;unindent
-key alt+i;indent
-key esc i;indent
-key esc I;unindent
-key esc [ Z       unindent
-key keycode353    unindent
-#key tab;insertSpaces 4
-#key tab;insertTab
-key ctrl+t;insertTab
-key alt+j    joinLines
+key backspace      backspace
+key ctrl+h         backspace
+key del            delete
+#key ctrl+k        deleteLine
+key ctrl+k         deleteAndStoreLine
+key ctrl+alt+k     deleteToEOL
+key ctrl+d t       delete_to
+key ctrl+d ctrl+t  delete_to
+key esc del        collapseWhitespace
+key esc [ 3 ; 3 ~  collapseWhitespace
+key alt+w          wrap_paragraph
+key alt+a          columnize
+key enter          carriageReturn
+key tab            parsedIndent
+#key tab           indent
+#key ctrl+alt+l    unindent
+key alt+i          indent
+key esc i          indent
+key esc I          unindent
+key esc [ Z        unindent
+key keycode353     unindent
+#key tab           insertSpaces 4
+#key tab           insertTab
+key ctrl+t         insertTab
+key alt+j          joinLines
 
 key f1             help
 key esc O P        help
