@@ -66,7 +66,7 @@ require 'diakonos/vendor/fuzzy_file_finder'
 module Diakonos
 
   VERSION       = '0.8.7'
-  LAST_MODIFIED = 'February 17, 2009'
+  LAST_MODIFIED = 'February 18, 2009'
 
   DONT_ADJUST_ROW       = false
   ADJUST_ROW            = true
